# LPA_VIBE2

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_accounts.py  0002_org_scoped_roles.py  0003_activation_tokens.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/middleware/: __init__.py  auth.py  cors.py  rate_limit.py
backend/app/api/routes/: __init__.py  _errors.py  auth.py  members.py  organizations.py
backend/app/api/schemas/: __init__.py
backend/app/application/: __init__.py
backend/app/application/dto/: __init__.py  auth_dto.py  member_dto.py  organization_dto.py
backend/app/application/ports/: __init__.py  auth_service.py  email_queue.py  email_sender.py  magic_link_repository.py  member_repository.py  organization_repository.py
backend/app/application/services/: __init__.py  activation_email.py
backend/app/application/use_cases/: __init__.py
backend/app/domain/entities/: __init__.py  member.py  organization.py
backend/app/domain/errors/: __init__.py  auth_error.py
backend/app/domain/events/: __init__.py  member_logged_in.py  member_registered.py
backend/app/domain/rules/: __init__.py  auth_rules.py
backend/app/domain/value_objects/: __init__.py  email.py  locale.py  magic_link_purpose.py  role_name.py
backend/app/infrastructure/auth/: __init__.py  email_sender_stub.py  jwt_service.py  password_service.py
backend/app/lib/: __init__.py  errors.py  logger.py  result.py
backend/tests/api/: __init__.py  test_auth_routes.py  test_rate_limits.py
backend/tests/application/: __init__.py  test_jwt_service.py  test_login.py  test_password_service.py  test_register.py
backend/tests/domain/: __init__.py  test_email_vo.py  test_locale_vo.py
backend/tests/lib/: test_errors.py  test_logger.py  test_result.py
(+194 files in other folders)
